# verum

./: .bazelrc  .dockerignore  .gitignore  BUILD.bazel  CMakeLists.txt  Dockerfile  Dockerfile.conan  LICENSE.md  Makefile  README.md  WORKSPACE  conan.py  conanfile.py
.circleci/: config.yml
exam/: BUILD.bazel  README_EXAM.md  exam.hpp  macros.hpp  mock_log.hpp  nosupport_log.hpp
exam/test/: main.cpp
muta/: BUILD.bazel  igenerator.hpp  mutator.hpp  mutator_generator.hpp  random.hpp  random_generator.hpp
muta/src/: mutator.cpp  random_generator.cpp
muta/test/: main.cpp
muta_io/: BUILD.bazel  server.cpp
scripts/: coverage.sh  label_replace.py  label_uniquify.py  tests.sh  yaml_replace.py
verum/: BUILD.bazel
verum/exam/: BUILD.bazel  macros.h  mock_log.h  nosupport_log.h
verum/exam/test/: main.cc
verum/muta/: BUILD.bazel  igenerator.h  mutation.proto  mutator.cc  mutator.h  mutator_generator.h  random.h  random_generator.cc  random_generator.h
verum/muta/test/: main.cc
verum/muta_io/: BUILD.bazel  server.cc
