licenses(["notice"])

package(
    default_visibility = ["//visibility:public"],
)

######### DEVELOPER TOOLS ########

load("@com_grail_bazel_compdb//:aspects.bzl", "compilation_database")
compilation_database(
    name = "compdb",
    targets = [
		"//verum/exam:exam",
        "//verum/muta:muta",
    ],
)
