licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":exam_hdrs",
        ":test_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "exam_hdrs",
    srcs = glob(["*.h"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.cc"]),
)

######### LIBRARY #########

cc_library(
    name = "exam",
    hdrs = [":exam_hdrs"],
    deps = [
        "@com_github_mingkaic_cisab//cisab/logs",
        "@gtest//:gtest",
    ],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = [":test_srcs"],
    deps = [
        ":exam",
    ],
    linkstatic = True,
)
