licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        "server.cc",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

######### SERVER #########

cc_binary(
	name = "session_printer",
	srcs = ["server.cc"],
	deps = [
		"//verum/muta:muta_cc_grpc",
		"@com_github_grpc_grpc//:grpc++",
	],
    visibility = ["//visibility:public"],
)
